<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey0"
        tools:context=".views.fragment.PrivacyPolicyFragment">

        <ImageView
            android:id="@+id/iv_app_icon"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:layout_marginTop="@dimen/_50sdp"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/basier_circle"
            android:text="@string/app_name"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_app_icon" />

        <TextView
            android:id="@+id/tv_welcome_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:fontFamily="@font/basiercircle_medium"
            android:text="@string/welcome_message"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_app_name" />

        <CheckBox
            android:id="@+id/cb_privacy_terms"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:paddingStart="@dimen/_10sdp"
            android:text="@string/consent_privacy_terms"
            app:layout_constraintBottom_toTopOf="@id/tv_accept_and_continue"
            app:layout_constraintEnd_toStartOf="@id/tvRead"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvRead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16sdp"
            android:padding="@dimen/_5sdp"
            android:text="@string/read"
            android:textColor="@color/hyperLink"
            app:layout_constraintBottom_toBottomOf="@id/cb_privacy_terms"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/cb_privacy_terms" />

        <TextView
            android:id="@+id/tv_accept_and_continue"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginBottom="@dimen/_40sdp"
            android:background="@drawable/bg_solid_round_edges"
            android:backgroundTint="@color/primaryDark"
            android:fontFamily="@font/basiercircle_semibold"
            android:gravity="center"
            android:text="@string/accept_and_continue"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>