<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_rv_solid_round_edges"
        android:paddingBottom="@dimen/_30sdp">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:background="@color/primaryDark"
            android:fontFamily="@font/basiercircle_medium"
            android:gravity="center"
            android:text="@string/app_name"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/_16ssp"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tv_sure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_40sdp"
            android:fontFamily="@font/basiercircle_medium"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title" />

        <TextView
            android:id="@+id/tv_message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:fontFamily="@font/basier_circle"
            android:gravity="start"
            android:lineSpacingExtra="@dimen/_3sdp"
            android:paddingHorizontal="@dimen/_10sdp"
            android:text="@string/redeem_code_description"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_sure" />

        <TextView
            android:id="@+id/tv_redeem_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_40sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:background="@drawable/bg_disable"
            android:drawablePadding="@dimen/_15sdp"
            android:fontFamily="@font/basier_circle"
            android:gravity="center"
            android:paddingHorizontal="@dimen/_15sdp"
            android:paddingVertical="@dimen/_8sdp"
            android:text="@string/copy"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/_10ssp"
            app:drawableStartCompat="@drawable/ic_copy_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_message" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>